# mdn-rnn-2

./: .gitignore  README.md  mdn-rnn  mdn-rnn-values  pyproject.toml  requirements.txt
.github/workflows/: api-deploy.yml  ci.yml  ui-deploy.yml
pre/: __init__.py
pre/api/: app.py  schemas.py  serve.py
pre/api/routes/: health.py  predict.py  reports.py  train.py
pre/benchmarks/: __init__.py  cli.py  runner.py
pre/config/: schema.py
pre/config/defaults/: lgbm_quantile.yaml  lstm_gauss.yaml  tft_quantile.yaml
pre/data/: __init__.py  base.py  energy_load.py  nyc_taxi.py  project_sim.py  telemetry.py  transforms.py
pre/demo/: __init__.py  cli.py  modes.py  runner.py
pre/eval/: calibration.py  metrics.py  reports.py
pre/infer/: __init__.py  predict.py  rollout.py  scoring.py
pre/models/: __init__.py  base.py  dummy.py  lgbm_quantile.py  lstm_gaussian.py  mdn_rnn.py  tft_quantile.py
pre/registry/: __init__.py  artifacts.py  model_store.py
pre/train/: __init__.py  callbacks.py  cli.py  trainer.py
tests/: test_api_routes.py  test_benchmark_and_demo.py  test_cli.py  test_data_pipeline.py  test_metrics.py  test_predictive_distribution.py
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/lab/: page.tsx
web/app/lab/modes/demand/: page.tsx
web/app/lab/modes/event-sandbox/: page.tsx
web/app/lab/modes/finance/: page.tsx
web/app/lab/modes/project-risk/: page.tsx
web/components/: CalibrationPlot.tsx  FanChart.tsx  ForecastBands.tsx  ModeCard.tsx  ModeDashboard.tsx  RegimeMarkers.tsx  TailRiskHeatmap.tsx  chartUtils.ts
(+1 files in other folders)
